--- a/Done/Base.lproj/Main.storyboard
+++ b/Done/Base.lproj/Main.storyboard
@@ -1819,7 +1819,7 @@
                                                 </constraints>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                                <state key="normal" title="SUBMIT"/>
+                                                <state key="normal" title="APPROVE"/>
                                                 <userDefinedRuntimeAttributes>
                                                     <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                         <real key="value" value="6"/>
@@ -2032,6 +2032,7 @@
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="40" id="RFB-Na-eOB"/>
                                                 </constraints>
+                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
                                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                 <state key="normal" title="Groups">
                                                     <color key="titleColor" red="0.59607843140000005" green="0.76862745099999996" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -2042,12 +2043,13 @@
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vMW-Vn-Dud">
                                                 <rect key="frame" x="0.0" y="50" width="335" height="40"/>
+                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
                                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                                <state key="normal" title="Feedback">
+                                                <state key="normal" title="Logout">
                                                     <color key="titleColor" red="0.59607843140000005" green="0.76862745099999996" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 </state>
                                                 <connections>
-                                                    <action selector="btnFeedBackAction:" destination="hz9-p4-j68" eventType="touchUpInside" id="Ftp-jq-24C"/>
+                                                    <action selector="btnLogoutAction:" destination="hz9-p4-j68" eventType="touchUpInside" id="CVz-4i-Fhx"/>
                                                 </connections>
                                             </button>
                                         </subviews>
