--- a/Done/Base.lproj/Main.storyboard
+++ b/Done/Base.lproj/Main.storyboard
@@ -583,9 +583,9 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RKI-Ko-BZW">
                                 <rect key="frame" x="0.0" y="20" width="375" height="50"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select Employee" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="27I-Ok-KYV">
-                                        <rect key="frame" x="124.5" y="14.5" width="126.5" height="21"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hire" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="27I-Ok-KYV">
+                                        <rect key="frame" x="170.5" y="14.5" width="34" height="21"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
@@ -629,32 +629,61 @@
                                     <constraint firstAttribute="height" constant="50" id="aJ5-0b-b3i"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="0FN-se-JSa">
-                                <rect key="frame" x="0.0" y="120" width="375" height="547"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="0FN-se-JSa">
+                                <rect key="frame" x="0.0" y="120" width="375" height="502"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yI4-xg-OMe">
+                                <rect key="frame" x="20" y="622" width="335" height="40"/>
+                                <color key="backgroundColor" red="0.59607843140000005" green="0.76862745099999996" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="URx-Wg-HeU"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="DONE">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="6"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="doneBtnAction" destination="Xed-xO-YPC" eventType="touchUpInside" id="FmQ-rQ-PsI"/>
+                                    <action selector="doneBtnAction" destination="IzO-QS-Hip" eventType="touchUpInside" id="SKc-nP-ged"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="mkm-89-RVk"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="0FN-se-JSa" firstAttribute="top" secondItem="gGq-y3-f80" secondAttribute="bottom" id="0pb-P4-ZsY"/>
                             <constraint firstItem="RKI-Ko-BZW" firstAttribute="leading" secondItem="mkm-89-RVk" secondAttribute="leading" id="0rL-EA-OZs"/>
                             <constraint firstItem="RKI-Ko-BZW" firstAttribute="top" secondItem="mkm-89-RVk" secondAttribute="top" id="2xb-Cx-E2z"/>
                             <constraint firstItem="9Gv-q4-9pq" firstAttribute="leading" secondItem="mkm-89-RVk" secondAttribute="leading" constant="10" id="8AQ-fg-s8i"/>
+                            <constraint firstItem="yI4-xg-OMe" firstAttribute="top" secondItem="0FN-se-JSa" secondAttribute="bottom" id="MCe-ib-SRb"/>
                             <constraint firstItem="mkm-89-RVk" firstAttribute="trailing" secondItem="RKI-Ko-BZW" secondAttribute="trailing" id="MSt-1E-W5m"/>
-                            <constraint firstItem="mkm-89-RVk" firstAttribute="bottom" secondItem="0FN-se-JSa" secondAttribute="bottom" id="ScO-Gd-jAd"/>
-                            <constraint firstItem="0FN-se-JSa" firstAttribute="leading" secondItem="mkm-89-RVk" secondAttribute="leading" id="TMa-mp-Fxg"/>
+                            <constraint firstItem="yI4-xg-OMe" firstAttribute="leading" secondItem="mkm-89-RVk" secondAttribute="leading" constant="20" id="Puu-wU-Plw"/>
+                            <constraint firstItem="mkm-89-RVk" firstAttribute="trailing" secondItem="yI4-xg-OMe" secondAttribute="trailing" constant="20" id="Ql1-Gp-GVl"/>
                             <constraint firstItem="mkm-89-RVk" firstAttribute="trailing" secondItem="gGq-y3-f80" secondAttribute="trailing" id="VSj-Ay-nUO"/>
+                            <constraint firstItem="0FN-se-JSa" firstAttribute="trailing" secondItem="mkm-89-RVk" secondAttribute="trailing" id="XS5-WL-2wi"/>
+                            <constraint firstItem="0FN-se-JSa" firstAttribute="top" secondItem="gGq-y3-f80" secondAttribute="bottom" id="Yab-OA-UPj"/>
                             <constraint firstItem="gGq-y3-f80" firstAttribute="leading" secondItem="mkm-89-RVk" secondAttribute="leading" id="cy2-6X-Jcy"/>
-                            <constraint firstItem="mkm-89-RVk" firstAttribute="trailing" secondItem="0FN-se-JSa" secondAttribute="trailing" id="ji2-RY-oUU"/>
+                            <constraint firstItem="0FN-se-JSa" firstAttribute="leading" secondItem="mkm-89-RVk" secondAttribute="leading" id="gWg-Ru-Kja"/>
+                            <constraint firstItem="mkm-89-RVk" firstAttribute="bottom" secondItem="yI4-xg-OMe" secondAttribute="bottom" constant="5" id="lDq-D0-fw0"/>
                             <constraint firstItem="gGq-y3-f80" firstAttribute="top" secondItem="RKI-Ko-BZW" secondAttribute="bottom" id="oAl-fw-cAW"/>
                             <constraint firstItem="9Gv-q4-9pq" firstAttribute="centerY" secondItem="RKI-Ko-BZW" secondAttribute="centerY" id="ow8-eT-psG"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="membersTB" destination="0FN-se-JSa" id="X33-bu-KFh"/>
+                        <outlet property="searchTF" destination="evt-pX-ChT" id="wy9-Bm-fUW"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="80f-IY-8kN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3990" y="942"/>
+            <point key="canvasLocation" x="3989.5999999999999" y="941.37931034482767"/>
         </scene>
         <!--Image And Video Comment View Controller-->
         <scene sceneID="uMg-As-FTF">
